frontend/test/typecheck/success/dowhile-return.fc
void foo(bool b) {
    do {
        return;
    } while (b);
    do return; while (b);
}
