frontend/test/typecheck/error/void-array.fc
void foo() {
    void[10] arr;
}
